feat: basic pipeline test for charging efficiency job